Add: minio bucket setup
